@@ -17,17 +17,26 @@ public class Journal extends HashMap<LocalDate, JournalEntry> {
         this.species = species;
     }
 
-    public Journal(List<List<String>> val, PlageMesure plage, Species species){
+    public Journal(List<List<String>> val, List<List<String>> photos, PlageMesure plage, Species species){
         this.species = species;
-        for(List<String> cas : val){
+        for(int i = 0; i<val.size();i++){
+            List<String> cas = val.get(i);
             String da = cas.get(0);
             int day = Integer.parseInt(da.substring(0,2));
             int month = Integer.parseInt(da.substring(2,4));
             int year = Integer.parseInt(da.substring(4,8));
             LocalDate date = LocalDate.of(year, Month.of(month),day);
 
-            List<String> info = cas.subList(1,cas.size());
-            JournalEntry entry = new JournalEntry(plage, info, species);
+            List<String> vals = cas.subList(1,cas.size()-3);
+            List<Boolean> bools = new ArrayList<>();
+            for(String s : cas.subList(cas.size()-3, cas.size()) ){
+                if(s.equals("0")){
+                    bools.add(false);
+                } else {
+                    bools.add(true);
+                }
+            }
+            JournalEntry entry = new JournalEntry(plage, vals, species, bools,photos.get(i));
             this.put(date, entry);
         }
     }
@@ -59,7 +68,7 @@ public class Journal extends HashMap<LocalDate, JournalEntry> {
     public void newEntry(LocalDate value) {
         if (this.isEmpty()) this.put(value, new JournalEntry(species));
         else {
-            LocalDate lastDate = this.getSortedDates().getLast();
+            LocalDate lastDate = this.getSortedDates().get(this.getSortedDates().size()-1);
             JournalEntry last = this.get(lastDate);
             this.remove(value);
             this.put(value, new JournalEntry(last));
