@@ -1,5 +1,7 @@
 package org.example.projetjardinage.model.journal.mesures;
 
+import org.example.projetjardinage.model.journal.InfoMesure;
+
 import java.util.ArrayList;
 import java.util.List;
 
@@ -16,6 +18,13 @@ public class MesureScale extends Mesure {
 
     public MesureScale(String val){ this.setNiveauLect(val); }
 
+    public MesureScale(String unit, String val){
+        ArrayList<String> minMax = new ArrayList<>(List.of(unit.split("<SEP>")));
+        this.niveau = Integer.parseInt(val);
+        this.min = Integer.parseInt(minMax.get(0));
+        this.max = Integer.parseInt(minMax.get(1));
+    }
+
     public int getNiveau(){ return niveau; }
     public void setNiveau(int niveau) { this.niveau = niveau; }
 
@@ -25,10 +34,14 @@ public class MesureScale extends Mesure {
     public int getMax(){ return max; }
     public void setMax(int max) { this.max = max; }
 
+    public Integer getValue(){
+        return this.niveau;
+    }
+
     public void setNiveauLect(String niv){
         ArrayList<String> nivList = new ArrayList<>(List.of(niv.split("<SEP>")));
         if (nivList.size() == 1) {
-            this.niveau = Integer.parseInt(nivList.getFirst());
+            this.niveau = Integer.parseInt(nivList.get(0));
             this.min = 0;
             this.max = 3;
         } else {
